# esp-idf

./: README.md
esp32c6/: CMakeLists.txt  sdkconfig
esp32c6/main/: main.c
rgb_led/main/: rgb_led.c  rgb_led.h
wifi/: CMakeLists.txt  README.md  partitions_two_ota.csv  partitions_two_ota.ods  sdkconfig  sdkconfig.old
wifi/main/: CMakeLists.txt
wifi/main/include/: dht11.h  http_server.h  nvs.h  rgb_led.h  sntp_time_sync.h  tasks_common.h  wifi.h  wifi_reset_button.h
wifi/main/src/: aws_iot.c  dht11.c  http_server.c  main.c  nvs.c  rgb_led.c  sntp_time_sync.c  wifi.c  wifi_reset_button.c
wifi/main/webpage/: app.css  app.js  index.html
